2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* docs/manual/highlevel-components.xml:
	  Add subtitle/streamselection as new features to playbin.

2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* docs/manual/manual.xml:
	  Re-enable dataaccess docs (oops).

2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/advanced-types.xml:
	* docs/random/mimetypes:
	  Add documentation on libsndfile types (#163309), by Steve Baker
	  <steve@stevebaker.org>.
	* gst/gstelement.c: (gst_element_release_request_pad):
	  If an element has no explicit function, just remove the pad.

2005-01-17  Luca Ognibene  <luogni@tin.it>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/registries/gstxmlregistry.c: (gst_xml_registry_load):
	  Fix memleak (#163801).

2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/elements/gsttee.c: (gst_tee_getcaps), (gst_tee_link):
	  I think this is actually moer correct...

2005-01-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstprobe.c: (gst_probe_dispatcher_dispatch):
	  Another workaround for memory access while destroyed in callback.
	  Please, someone with refcount knowledge, have a look at this.

2005-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/faq/faq.xml:
	* docs/faq/legal.xml:
	  move the legal Q&A here

2005-01-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/elements/gsttee.c: (gst_tee_getcaps), (gst_tee_link),
	(gst_tee_request_new_pad):
	  Fix negotiation.

2005-01-14  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* docs/random/omega/caps2:
	* testsuite/caps/caps_strings:
	  replace framerate aproximations by their real value
	  (24000/1001, 30000/1001, 60000/1001)
	  Partially fixes bug #164049

2005-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/Makefile.am:
	  don't fail on the stupid GstPoptOption

2005-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>
